<resources>
    <string name="app_name">RedditGifts</string>
    <!-- LOGIN -->
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="login_action">Log in</string>
    <!-- MAIN -->
    <string name="main_home">Home</string>
    <string name="main_gallery">Gallery</string>
    <string name="main_account">Account</string>
    <string name="main_login">Please login</string>
    <string name="main_loading">Loading…</string>
    <!-- EXCHANGES -->
    <string name="exchanges_credits">Credits: %d</string>
    <string name="exchanges_status">Status</string>
    <string name="exchanges_statistics">Statistics</string>
    <string name="exchanges_gallery">Gallery</string>
    <string name="exchanges_empty">No exchanges here right now.\n\nIn the mean time, check out the gallery.</string>
    <!-- STATISTICS -->
    <string name="statistics_participants">Participants</string>
    <string name="statistics_matches">Matches</string>
    <string name="statistics_retrieved">Retrieved</string>
    <string name="statistics_shipped">Shipped</string>
    <string name="statistics_gift">Gift in Gallery</string>
    <string name="statistics_rematch_signups">Rematch Signups</string>
    <string name="statistics_rematch_done">Rematches</string>
    <!-- GALLERY -->
    <string name="gallery_empty">No items here!</string>
    <string name="gallery_sender">Posted by %s</string>
    <!-- MESSAGES -->
    <string name="messages_title">Messages</string>
    <string name="messages_empty">No messages!</string>
    <string name="messages_sender">From: %s</string>
    <string name="messages_sending">Sending message…</string>
    <string name="messages_reply">Reply</string>
    <string name="messages_did_reply">Message successfully sent</string>
    <!-- SEND MESSAGE -->
    <string name="send_message_title">New message</string>
    <string name="send_message_action">Send</string>
    <string name="send_message_to">To:</string>
    <string name="send_message_subject">Subject:</string>
    <string name="send_message_message">Message:</string>
    <!-- STATUS -->
    <string name="state_santa">Your Santa\'s Gift to You</string>
    <string name="state_giftee">Your Gift to Your Match</string>
    <!-- ACCOUNT -->
    <string name="account_logout">Sign out</string>
    <!-- PAST EXCHANGES -->
    <string name="exchange_postcards_2018">Postcards (Zero Credit!) 2018</string>
    <string name="exchange_funko_pop_2018">Funko Pop Exchange 2018</string>
    <string name="exchange_coffee_and_tea_2018">Coffee and Tea 2018</string>
    <string name="exchange_star_wars_2018">Star Wars 2018</string>
    <string name="exchange_holiday_cards_2018">Holiday Cards 2018 (zero credit)</string>
    <string name="exchange_secret_santa_2018">Secret Santa 10th Annual Extravaganza!</string>
    <string name="exchange_kitchen_goods_2018">Kitchen Goods 2018</string>
    <string name="exchange_trick_or_treat_2018">Trick or Treat 2018</string>
    <string name="exchange_diwali_2018">Diwali 2018</string>
    <string name="exchange_art_supplies_2018">Art Supplies 2018</string>
    <string name="exchange_harry_potter_2018">Harry Potter 2018</string>
    <string name="exchange_ugly_mugs_2018">Ugly Mugs 2018</string>
    <!-- ERRORS -->
    <string name="error_load_html">Whoops! Please try again later</string>
    <string name="error_unknown">Unknown error</string>
    <!--LIKES-->
    <plurals name="likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
</resources>
