<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/sendMessageAction"
            android:layout_alignParentTop="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColor"
                    android:padding="8dp"
                    style="@style/LoginTextInputLayoutStyle"
                    android:hint="@string/send_message_to">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sendMessageTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="UnusedAttribute"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColor"
                    android:padding="8dp"
                    style="@style/LoginTextInputLayoutStyle"
                    android:hint="@string/send_message_subject">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sendMessageSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="UnusedAttribute"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColor"
                    android:padding="8dp"
                    style="@style/LoginTextInputLayoutStyle"
                    android:hint="@string/send_message_message">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sendMessageBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        tools:ignore="UnusedAttribute"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/sendMessageAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_alignParentBottom="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:enabled="false"
            android:text="@string/send_message_action"/>

</RelativeLayout>