<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

    <TextView
            android:id="@+id/exchangeLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/main_loading"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <LinearLayout
                android:id="@+id/exchangeStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/textColor"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/state_santa"/>

            <include
                    android:id="@+id/exchangeStatusAsGiftee"
                    layout="@layout/view_exchange_status" />

            <LinearLayout
                    android:id="@+id/exchangeDetailedStatusAsGiftee"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:padding="16dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/textColor"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/state_giftee"/>

            <include
                    android:id="@+id/exchangeStatusAsSanta"
                    layout="@layout/view_exchange_status" />

            <LinearLayout
                    android:id="@+id/exchangeDetailedStatusAsSanta"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:padding="16dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>